feat: insert alerts with vue-toastification

--- a/frontend-vue/src/assets/main.css
+++ b/frontend-vue/src/assets/main.css
@@ -1,1 +1,10 @@
 @import 'tailwindcss';
+@import 'vue-toastification/dist/index.css';
+
+.Vue-Toastification__toast.Vue-Toastification__toast--success {
+  background-color: theme('colors.success');
+}
+
+.Vue-Toastification__toast.Vue-Toastification__toast--error {
+  background-color: theme('colors.error');
+}
